--- a/DragonbaneCharacterSheetGenerator/Components/Layout/NavMenu.razor
+++ b/DragonbaneCharacterSheetGenerator/Components/Layout/NavMenu.razor
@@ -28,5 +28,10 @@
                 <span class="bi" aria-hidden="true"></span> Spells
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="settings">
+                <span class="bi" aria-hidden="true"></span> Settings
+            </NavLink>
+        </div>
     </nav>
 </div>
