--- a/DragonbaneCharacterSheetGenerator/Components/Layout/MainLayout.razor
+++ b/DragonbaneCharacterSheetGenerator/Components/Layout/MainLayout.razor
@@ -9,9 +9,7 @@
 
     <main>
         <div class="top-row px-4 d-flex justify-content-between align-items-center">
-            <div>
-                <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-            </div>
+            <div/>
             <div>
                 <a class="btn btn-outline-secondary" href="/settings">Settings</a>
             </div>
