--- a/DragonbaneCharacterSheetGenerator/Components/Layout/MainLayout.razor.css
+++ b/DragonbaneCharacterSheetGenerator/Components/Layout/MainLayout.razor.css
@@ -9,7 +9,7 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, rgba(42, 123, 155, 1) 0%, rgba(0, 102, 78, 1) 36%, rgba(21, 112, 0, 1) 100%);
 }
 
 .top-row {
