--- a/DragonbaneCharacterSheetGenerator/Components/Layout/NavMenu.razor
+++ b/DragonbaneCharacterSheetGenerator/Components/Layout/NavMenu.razor
@@ -15,22 +15,22 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="heroic-abilities">
-                <span class="bi" aria-hidden="true"></span> Heroic Abilities
+                <span class="bi bi-trophy-nav-menu" aria-hidden="true"></span> Heroic Abilities
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="innate-abilities">
-                <span class="bi" aria-hidden="true"></span> Innate Abilities
+                <span class="bi bi-leaf-nav-menu" aria-hidden="true"></span> Innate Abilities
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="spells">
-                <span class="bi" aria-hidden="true"></span> Spells
+                <span class="bi bi-book-nav-menu" aria-hidden="true"></span> Spells
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="settings">
-                <span class="bi" aria-hidden="true"></span> Settings
+                <span class="bi bi-gear-nav-menu" aria-hidden="true"></span> Settings
             </NavLink>
         </div>
     </nav>
