--- a/DragonbaneCharacterSheetGenerator/Components/Layout/NavMenu.razor.css
+++ b/DragonbaneCharacterSheetGenerator/Components/Layout/NavMenu.razor.css
@@ -1,3 +1,5 @@
+/* Sidebar appearance is now controlled in the global app.css to avoid using non-standard pseudo-classes here */
+
 .navbar-toggler {
     appearance: none;
     cursor: pointer;
